<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization.presentation.ui.EntryFragment">

    <TextView
        android:id="@+id/gridUpperTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/grid_text_start_margin"
        android:gravity="start"
        android:text="@string/upper_grids_text"
        android:textAppearance="@style/Widget.CashAdvisor.Text.HeaderStart.Gray"
        app:layout_constraintBottom_toTopOf="@+id/appNameTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/grid_text_start_margin"
        android:layout_marginTop="@dimen/app_name_top_margin"
        android:gravity="start"
        android:text="@string/grid_app_name"
        android:textAppearance="@style/Widget.CashAdvisor.Text.HeaderStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gridLowerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/grid_text_start_margin"
        android:gravity="start"
        android:text="@string/lower_grids_text"
        android:textAppearance="@style/Widget.CashAdvisor.Text.HeaderStart.Gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameTextView" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="@dimen/start_screen_cardview_maxwidth"
        android:minHeight="@dimen/start_screen_cardview_minheight"
        app:cardCornerRadius="@dimen/start_screen_cardview_radius"
        android:layout_marginHorizontal="@dimen/start_screen_cardview_horizontal_padding"
        android:layout_marginBottom="@dimen/start_screen_cardview_margin_bottom"
        app:cardElevation="@dimen/start_screen_cardview_elevation"
        app:layout_constraintBottom_toBottomOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:minHeight="@dimen/start_screen_cardview_llbuttons_minheight"
            android:paddingHorizontal="@dimen/start_screen_cardview_buttons_padding"
            android:paddingTop="@dimen/start_screen_cardview_buttons_padding">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signup"
                app:backgroundTint="@null"
                android:textColor="@color/white"
                android:fontFamily="@font/gilroysemibold"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:background="@drawable/black_button_r_10_no_stroke"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/start_screen_cardview_buttons_minheight"
                android:layout_weight="65"
                android:layout_marginEnd="8dp"
                android:text="@string/register_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                app:backgroundTint="@null"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:fontFamily="@font/gilroysemibold"
                android:background="@drawable/button_r10_black_stroke"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/start_screen_cardview_buttons_minheight"
                android:layout_weight="25"
                android:text="@string/login_text" />




        </LinearLayout>



    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>